# bdt-link-prediction

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  create_dataset.py  dataset_parser.py  entrypoint.py  main.py  pyproject.toml  requirements.txt  results-old.csv
old_approach/: create_dataset.py  dataset_parser.py
project/: Dockerfile  entrypoint.py  main.py  pyproject.toml  report.ipynb  requirements.txt  results.csv
project/jobs/: spark_convert_mat_csv_class.py  spark_create_data.py  spark_create_data_class.py
src/: check_dataset.ipynb  create_baseline_data.py  example.ipynb
src/scripts/: create_dataset.py  dataset_parser.py  spark_mapper.py  spark_reducer.py
src/utils/: __init__.py  similarity_scores.py
